[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Robot.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.75, 0.75, 0.75 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.2
bottom_radius = 0.2
height = 0.05

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0.337255 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.1, 1.5, 1.1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 3 )
size = Vector3( 0.1, 1.5, 0.7 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 3 )
size = Vector3( 0.1, 1.5, 0.6 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 1.4, 0.1, 1.4 )

[node name="Robot" type="VehicleBody"]
collision_layer = 2
collision_mask = 5
mass = 0.693878
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0 )
shape = SubResource( 1 )

[node name="VehicleWheel1" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.2, 0.7 )
wheel_radius = 0.2
wheel_rest_length = 0.05
suspension_travel = 0.05
suspension_stiffness = 70.0
suspension_max_force = 60000.0

[node name="MeshInstance" type="MeshInstance" parent="VehicleWheel1"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1.49012e-08, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="VehicleWheel2" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.2, -0.7 )
wheel_radius = 0.2
wheel_rest_length = 0.05
suspension_travel = 0.05
suspension_stiffness = 70.0
suspension_max_force = 60000.0

[node name="MeshInstance2" type="MeshInstance" parent="VehicleWheel2"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="VehicleWheel3" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.2, 0.7 )
wheel_radius = 0.2
wheel_rest_length = 0.05
suspension_travel = 0.05
suspension_stiffness = 70.0
suspension_max_force = 60000.0

[node name="MeshInstance3" type="MeshInstance" parent="VehicleWheel3"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="VehicleWheel4" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.2, -0.7 )
wheel_radius = 0.2
wheel_rest_length = 0.05
suspension_travel = 0.05
suspension_stiffness = 70.0
suspension_max_force = 60000.0

[node name="MeshInstance4" type="MeshInstance" parent="VehicleWheel4"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Model" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0.75, 0.2 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.75, 0.2 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Model"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.75, -0.7 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Model"]
transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -0.506127, 0.75, -0.51374 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="Model"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.506, 0.75, -0.514 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance6" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0501234, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="RangeFinderFront" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0.75 )
enabled = true
cast_to = Vector3( 0, 0, 12 )

[node name="RangeFinderLeft" type="RayCast" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.75, 0.7, 0 )
enabled = true
cast_to = Vector3( 0, 0, 12 )

[node name="RangeFinderBack" type="RayCast" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.696, -0.75 )
enabled = true
cast_to = Vector3( 0, 0, 12 )

[node name="RangeFinderRight" type="RayCast" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -0.75, 0.7, 0 )
enabled = true
cast_to = Vector3( 0, 0, 12 )
